# around

./: .env.local  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  TODO.md  compose.yaml  diesel.toml  flake.nix  init.sql  main.tf
.github/workflows/: lint.yaml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2025-02-26-014124_enrich-users/: down.sql  up.sql
migrations/2025-02-26-134224_create-events/: up.sql
src/: common.rs  events.rs  lib.rs  main.rs  openapi.rs  schema.rs  users.rs
