[package]
name = "around"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.7", features = ["postgres"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = "1.43.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
